examples/test/testpolicy2853.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2853
  namespace: namespace358
spec:
  podSelector:
    matchLabels:
      key24: value40
      key36: value44
      key4: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value9
          key23: value2
          key11: value24
      podSelector:
        matchLabels:
          key49: value40
          key23: value15
